fixed white space

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,6 @@ html:focus-within {
 
 body {
   min-height: 100vh;
-  text-rendering: optimizeSpeed;
   line-height: 1.5; }
 
 a:not([class]) {
@@ -121,9 +120,9 @@ footer {
   height: 5.63rem;
   width: 31.25rem;
   text-decoration: none;
-  color: rgba(255, 255, 255, 0.9);
+  color: rgba(255, 255, 255, 0.8);
   font-weight: 600;
-  padding-top: 1.75rem;
+  padding-top: 1.5rem;
   letter-spacing: 0.5px; }
 
 .btns {
@@ -305,14 +304,14 @@ footer {
     max-width: 90rem;
     margin: 0 auto; }
   .header__logo img {
-    margin: 13rem auto 5.75rem; }
+    margin: 13rem auto 5rem; }
   .header__section .heading--1 {
     font-size: 4.575rem;
     letter-spacing: -0.65px; }
   .header__section .desc {
     font-size: 2rem;
     max-width: 70rem;
-    margin: 1.6rem auto;
+    margin: 1.25rem auto;
     line-height: 1.5;
     letter-spacing: 0.1px; }
   .btns {
@@ -342,6 +341,8 @@ footer {
       letter-spacing: 0.125px; }
   .devices-img-container {
     padding: 8.25rem 1.5rem 7.25rem 1.8rem; }
+  .heading--2 + .desc--snippets {
+    font-size: 1.8rem; }
   .desc--super {
     margin-top: 2rem; }
   .workflow-container {
@@ -410,7 +411,7 @@ footer {
 
 @media (min-width: 74em) {
   .snippets-container {
-    margin: 9.25rem auto 24.5rem;
+    margin: 9.25rem auto 25rem;
     flex-direction: row;
     padding: 0;
     text-align: left;
@@ -429,16 +430,21 @@ footer {
       width: 50%;
       padding: 5.25rem 25.5rem 0rem 11rem; }
       .snippets-container .snippets-container__text .desc {
-        line-height: 3rem; }
+        line-height: 3rem;
+        margin-top: 0.5rem; }
       .snippets-container .snippets-container__text div:nth-of-type(2) {
-        margin: 5.6rem 0; }
+        margin: 5.25rem 0; }
+  .heading--2 + .desc--access {
+    font-size: 1.8rem; }
+  .heading--2 + .desc--super {
+    font-size: 1.8rem; }
   .companies {
     flex-direction: row;
     justify-content: center;
     gap: 9.5rem;
-    margin: 14rem auto 12rem; }
+    margin: 14rem auto 11.5rem; }
     .companies + .heading--2 + .desc {
-      margin: 2rem auto 4.8rem;
-      font-size: 1.575rem;
+      margin: 1.5rem auto 4.8rem;
+      font-size: 1.8rem;
       line-height: 1.62;
       letter-spacing: 0.2px; } }
